--- a/index.html
+++ b/index.html
@@ -55,9 +55,16 @@
         <section id="projects" class="section">
             <div class="section-title-wrap">
                 <h2 class="section-title">01 / PROJECT_NODES</h2>
-                <div id="api-status" class="api-status">STABLE</div>
+                <div id="api-status" class="api-status">ONLINE</div>
             </div>
+            
             <div id="repo-grid" class="repo-grid"></div>
+
+            <div class="pagination-controls" style="margin-top: 40px; display: flex; gap: 20px; justify-content: center; font-family: 'JetBrains Mono', monospace;">
+                <button id="prevBtn" onclick="changePage(-1)" style="background:none; border:1px solid #ccc; padding:8px 20px; cursor:pointer; font-weight:bold; transition:0.2s;">&lt; PREV</button>
+                <span id="pageIndicator" style="font-weight:bold; align-self:center; color:#666;">PAGE 1 / 2</span>
+                <button id="nextBtn" onclick="changePage(1)" style="background:none; border:1px solid #ccc; padding:8px 20px; cursor:pointer; font-weight:bold; transition:0.2s;">NEXT &gt;</button>
+            </div>
         </section>
 
         <section id="experience" class="section">
